# reservation-management-platform

./: .env.example  .gitignore  Makefile  README.md  docker-compose.admin.yml  docker-compose.dev.yml  docker-compose.yml  main_polling.py  pyproject.toml  requirements.txt
admin-panel/: .env.local.example  Dockerfile  middleware.ts  next.config.mjs  package.json  tailwind.config.ts
admin-panel/app/: layout.tsx
admin-panel/app/(dashboard)/: layout.tsx
admin-panel/components/: Sidebar.tsx  providers.tsx
admin-panel/lib/: api.ts  auth.ts
admin-panel/store/: auth.ts
app/api/: main.py
app/bot/: client.py  main.py
app/cache/: client.py  keys.py
app/core/: booking_rules.py  config.py  exceptions.py  logging.py
app/db/: session.py
app/repositories/: admin_audit_log.py  base.py  broadcast.py  channel.py  country.py  notification.py  reservation.py  score.py  slot.py  user.py
app/schedulers/: setup.py
app/services/: broadcast.py  country.py  notification.py  reservation.py  schedule_formatter.py  score.py  slot.py  user.py
app/templates/: schedule_message.j2
app/utils/: datetime.py
docker/: Dockerfile
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_add_channel_to_slots.py  0003_partial_unique_slot_reservation.py  0004_reservation_lifecycle_indexes.py  0005_participation_score.py  0006_notification_logs.py  0007_broadcast_and_schedule_events.py  0008_admin_audit_logs.py
scripts/: seed_countries.py
tests/: conftest.py
tests/test_services/: test_broadcast.py  test_schedule_formatter.py  test_slot_generation.py
(+63 files in other folders)
